[gd_scene load_steps=5 format=3 uid="uid://ithb25rl0sqb"]

[ext_resource type="Script" uid="uid://bu1ti5t7shrjn" path="res://starting_screen.gd" id="1_pssaq"]

[sub_resource type="Theme" id="Theme_mcy63"]
default_font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3bd0"]
bg_color = Color(0.458281, 0.737759, 0.685345, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_krrsl"]
bg_color = Color(0.637799, 0.61215, 0.337119, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Node2D" type="Node2D"]

[node name="level 1 button" type="Button" parent="."]
offset_left = 87.0
offset_top = 306.0
offset_right = 180.0
offset_bottom = 398.0
scale = Vector2(1.58405, 1.05787)
theme = SubResource("Theme_mcy63")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3bd0")
theme_override_styles/normal = SubResource("StyleBoxFlat_krrsl")
text = "1"
script = ExtResource("1_pssaq")

[node name="level 2 button" type="Button" parent="level 1 button"]
layout_mode = 0
offset_left = 128.153
offset_top = -2.83587
offset_right = 223.153
offset_bottom = 88.1641
theme = SubResource("Theme_mcy63")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3bd0")
theme_override_styles/normal = SubResource("StyleBoxFlat_krrsl")
text = "2"
script = ExtResource("1_pssaq")

[node name="level 3 button" type="Button" parent="level 1 button/level 2 button"]
layout_mode = 0
offset_left = 132.0
offset_top = 1.0
offset_right = 227.0
offset_bottom = 92.0
theme = SubResource("Theme_mcy63")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3bd0")
theme_override_styles/normal = SubResource("StyleBoxFlat_krrsl")
text = "3"
script = ExtResource("1_pssaq")

[node name="level 4 button" type="Button" parent="level 1 button/level 2 button/level 3 button"]
layout_mode = 0
offset_left = 132.0
offset_top = 1.0
offset_right = 227.0
offset_bottom = 92.0
theme = SubResource("Theme_mcy63")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3bd0")
theme_override_styles/normal = SubResource("StyleBoxFlat_krrsl")
text = "4"
script = ExtResource("1_pssaq")

[node name="level 5 button" type="Button" parent="level 1 button/level 2 button/level 3 button/level 4 button"]
layout_mode = 0
offset_left = 132.0
offset_top = 1.0
offset_right = 227.0
offset_bottom = 92.0
theme = SubResource("Theme_mcy63")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3bd0")
theme_override_styles/normal = SubResource("StyleBoxFlat_krrsl")
text = "5"
script = ExtResource("1_pssaq")

[connection signal="pressed" from="level 1 button" to="level 1 button/level 2 button" method="_on_level_1_button_pressed"]
[connection signal="pressed" from="level 1 button/level 2 button" to="level 1 button/level 2 button/level 3 button" method="_on_level_2_button_pressed"]
[connection signal="pressed" from="level 1 button/level 2 button/level 3 button" to="level 1 button/level 2 button/level 3 button/level 4 button" method="_on_level_3_button_pressed"]
[connection signal="pressed" from="level 1 button/level 2 button/level 3 button/level 4 button" to="level 1 button/level 2 button/level 3 button/level 4 button/level 5 button" method="_on_level_4_button_pressed"]
[connection signal="pressed" from="level 1 button/level 2 button/level 3 button/level 4 button/level 5 button" to="level 1 button" method="_on_level_5_button_pressed"]
